[alturl] Incorporate newly added icons, prevent wrapping of date.

--- a/apps/static/css/medley.css
+++ b/apps/static/css/medley.css
@@ -282,6 +282,7 @@ TEXTAREA {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    white-space: nowrap;
 }
 
 #collection time svg {
